add file text.txt on public and add post method on app.rb

--- a/views/new.erb
+++ b/views/new.erb
@@ -1,8 +1,8 @@
 <h2>Add new post</h2>
 
 
-<form>
-  <textarea class="form-control" rows="10"></textarea>
+<form action="/new" method="POST">
+  <textarea name="textarea" class="form-control" rows="10"></textarea>
   <br>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
