add plaseholder on form /new

--- a/views/new.erb
+++ b/views/new.erb
@@ -2,7 +2,7 @@
 
 
 <form action="/new" method="POST">
-  <textarea name="textarea" class="form-control" rows="10"></textarea>
+  <textarea name="textarea" class="form-control" rows="10" placeholder="Type post text hare"></textarea>
   <br>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
