--- a/views/new.erb
+++ b/views/new.erb
@@ -2,6 +2,9 @@
 
 
 <form action="/new" method="POST">
+
+	<textarea name="title" class="form-control" rows="1" placeholder="Type post name hare"></textarea>
+
   <textarea name="content" class="form-control" rows="10" placeholder="Type post text hare"></textarea>
   <br>
   <button type="submit" class="btn btn-primary">Submit</button>
