--- a/views/new.erb
+++ b/views/new.erb
@@ -3,7 +3,7 @@
 
 <form action="/new" method="POST">
 
-	<textarea name="title" class="form-control" rows="1" placeholder="Type post name hare"></textarea>
+	<textarea name="title" class="form-control" rows="1" placeholder="TITLE POST"></textarea>
 
   <textarea name="content" class="form-control" rows="10" placeholder="Type post text hare"></textarea>
   <br>
