--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
 	
 <% @results.each do |row| %>
 
-<div class="panel panel-primary">
+<div class="panel panel-info">
   <div class="panel-heading">
     <h3 class="panel-title"><%= row['title'] %></h3>
   </div>
