add if @error title,  content

--- a/views/new.erb
+++ b/views/new.erb
@@ -3,7 +3,7 @@
 
 <form action="/new" method="POST">
 
-	<textarea name="title" class="form-control" rows="1" placeholder="TITLE POST"></textarea>
+	<input name="title" type="text" class="form-control" rows="1" placeholder="TITLE POST" value="<%=@title%>">
 
   <textarea name="content" class="form-control" rows="10" placeholder="Type post text hare"></textarea>
   <br>
