--- a/views/index.erb
+++ b/views/index.erb
@@ -13,7 +13,11 @@
   </div>
   <div class="panel-body">
     <%= row['content'] %>
+    <br>
+    <br>
+    <h5><strong> Дата создания: <%= row['datetime']%></strong></h5>
+    
   </div>
 </div>
-
+<br>
 <% end %>
