add details view

--- a/views/index.erb
+++ b/views/index.erb
@@ -18,7 +18,7 @@
     <br>
     <h5><strong> Дата создания: <%= row['datetime']%></strong></h5>
     <br>
-    <a href="/post/<%= row['id'] %>">Оставить коментарий</a>
+    <a href="/details/<%= row['id'] %>">Оставить коментарий</a>
     
   </div>
 </div>
