--- a/views/details.erb
+++ b/views/details.erb
@@ -20,7 +20,7 @@
   
 
   
-  <textarea name="comment" class="form-control" rows="1" placeholder="Type post text hare"></textarea>
+  <textarea name="content" class="form-control" rows="1" placeholder="Type post text hare"></textarea>
   
   <button type="submit" class="btn btn-primary">Добавить коментарий</button>
 </form>
