--- a/views/layout.erb
+++ b/views/layout.erb
@@ -25,12 +25,12 @@
 			      <span class="icon-bar"></span>
 			      <span class="icon-bar"></span>
 			    </button>
-			    <a class="navbar-brand" href="/">Leprosorium</a>
+			    <a class="navbar-brand" href="/">Karamalesa TV</a>
 			  </div>
 			  <div class="navbar-collapse collapse">
 			    <ul class="nav navbar-nav">
-			      <li><a href="/">Main</a></li>
-			      <li><a href="/new">New Post</a></li>
+			      <li><a href="/">Все статьи</a></li>
+			      <li><a href="/new">Новая статья</a></li>
 			      
 			    </ul>
 			  </div><!--/.nav-collapse -->
