--- a/views/new.erb
+++ b/views/new.erb
@@ -1,12 +1,12 @@
-<h2>Add new post</h2>
+<h2>Новая статья</h2>
 
 
 <form action="/new" method="POST">
 
-	<input name="title" type="text" class="form-control" rows="1" placeholder="TITLE POST" value="<%=@title%>">
+	<input name="title" type="text" class="form-control" rows="1" placeholder="Введите свое имя" value="<%=@title%>">
 
   <br>	
-  <textarea name="content" class="form-control" rows="10" placeholder="Type post text hare"></textarea>
+  <textarea name="content" class="form-control" rows="10" placeholder="Введите текст"></textarea>
   <br>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
