--- a/views/index.erb
+++ b/views/index.erb
@@ -9,14 +9,16 @@
 
 <div class="panel panel-info">
   <div class="panel-heading">
-    <h3 class="panel-title"><%= row['title'] %></h3>
+    <h3 class="panel-title">Автор: <%= row['title'] %></h3>
+    
+    <span style="font-size: 75%; color: #999"> Добавлен: <%= row['datetime']%></span>
   </div>
   <div class="panel-body">
     <%= row['content'] %>
     <br>
 
-    <br>
-    <h5><strong> Дата создания: <%= row['datetime']%></strong></h5>
+    
+    
     <br>
     <a href="/details/<%= row['id'] %>">Оставить коментарий</a>
     
